<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoundEffects</string>
    <string name="action_settings">Settings</string>
    <string name="sound_effect">SoundEffects</string>
    <string name="title_activity_effect">EffectActivity</string>
    <string name="title_activity_recording">RecordingActivity</string>
    <string name="btn_record">Record</string>
    <string name="recording">Recording in ..</string>
    <string name="btn_stop_record">Stop</string>
    <string name="btn_record_again">ReRecord</string>
    <string name="btn_effect_cat">Cat</string>
    <string name="btn_effect_cow">Cow</string>
    <string name="btn_effect_bird">Bird</string>
    <string name="btn_effect_fast">Fast</string>
    <string name="btn_effect_robot">Robot</string>
    <string name="btn_effect_stage">Stage</string>
    <string name="btn_effect_dub_vader">Dub Vader</string>
    <string name="btn_effect_romance">Romance</string>
    <string name="btn_effect_mic">Mic</string>
    <string name="btn_effect_original">Original</string>
    <string name="btn_effect_bath">Bathroom</string>
    <string name="btn_effect_techtronic">Techtronic</string>
    <string name="btn_effect_dub">Dub</string>

</resources>