<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EffectActivity" >

    <Button
        android:id="@+id/btn_effect_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_effect_fast"
        android:layout_marginLeft="34dp"
        android:layout_toRightOf="@+id/btn_effect_bird"
        android:text="@string/btn_effect_cat"
        android:textSize="15sp"
        android:width="100dp" />

    <Button
        android:id="@+id/btn_effect_fast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_effect_cat"
        android:layout_below="@+id/btn_effect_bird"
        android:layout_marginTop="26dp"
        android:text="@string/btn_effect_fast"
        android:textSize="15sp"
        android:width="100dp" />

    <Button
        android:id="@+id/btn_effect_cow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_effect_fast"
        android:layout_alignBottom="@+id/btn_effect_fast"
        android:layout_toLeftOf="@+id/btn_effect_cat"
        android:text="@string/btn_effect_cow"
        android:textSize="15sp"
        android:width="100dp" />

    <Button
        android:id="@+id/btn_effect_bird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="46dp"
        android:text="@string/btn_effect_bird"
        android:textSize="15sp"
        android:width="100dp" />

    <Button
        android:id="@+id/btn_effect_stage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_effect_robot"
        android:layout_alignBottom="@+id/btn_effect_robot"
        android:layout_alignLeft="@+id/btn_effect_fast"
        android:text="@string/btn_effect_stage"
        android:textSize="15sp"
        android:width="100dp" />

    <Button
        android:id="@+id/btn_effect_robot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_effect_cow"
        android:layout_below="@+id/btn_effect_cow"
        android:layout_marginTop="36dp"
        android:text="@string/btn_effect_robot"
        android:textSize="15sp"
        android:width="100dp" />

</RelativeLayout>